testament/tests/shouldfail/toutputsub.nim
discard """
outputsub: "something else"
target: c
"""

echo "Hello World!"
